# poker

./: .gitignore  README_LLM.md  clean_transcript.py  create_json.py  debug_file.py  ideas.txt  main.py  main2.py  poker_trainer.py  process_transcript.py  pyproject.toml  quick_test.py  requirements.txt  setup_llm.py  utils.py
guides/fixed_transcripts/: 1. 95% of Pots are Multiway.txt  11. They Thought I was Tight. I Made 1M Bluffing them Blind.txt  13. This ONE Skill Makes Poker Feel Like Cheating.txt  14. We Built Her a 100k per year Poker Plan.txt  17. The Best Sizing Mistake That's Costing You Big.txt  18. Why Good Poker Players Actually Suck.txt  19. 99% of Players Fail this Poker IQ Test.txt  2. Most Players Use this Bet Size.txt  20. Want to Lose at Poker - Do This.txt  22. If your bankroll is under 10k, watch this now.txt  26. This Secret Turn Poker Players into CRUSHERS.txt  27. Why Playing Crazy Might be Safer than you think.txt  28. What High Stakes Pros Know that Low Stakes Players Don't.txt  3. You're Sizing Bets Wrong.txt  30. Low Stakes Players Have Figured Me Out - Now what.txt  31. My Bankroll Exploded when I started Doing this.txt  34. I was Wrong about Low Takes Poker.txt  37. Everything They Told you About Poker is a Lie.txt  38. Here is why your bluffs aren't working.txt  39. Four Fishy Poker Plays that actually print.txt  (+13 more)
poker_output/: chunks_3. You're Sizing Bets Wrong.json  poker_rules.json  questions.json
src/: config.py  poker_processor.py  processing_agents.py  prompts.py
tests/: embedding_test.py  test_connection.py
(+47 files in other folders)
